syntax = "proto3";
package gov.hhs.aspr.gcm.translation.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.gcm.translation.protobuf.plugins.personproperties.input";

import "properties-plugin.proto";
import "people-plugin.proto";
import "reports-plugin.proto";
import "google/protobuf/any.proto";

message PersonPropertyIdInput {
    google.protobuf.Any id = 1;
}

enum TestPersonPropertyIdInput {
    PERSON_PROPERTY_1_BOOLEAN_MUTABLE_NO_TRACK = 0;
    PERSON_PROPERTY_2_INTEGER_MUTABLE_NO_TRACK = 1;
    PERSON_PROPERTY_3_DOUBLE_MUTABLE_NO_TRACK = 2;
    PERSON_PROPERTY_4_BOOLEAN_MUTABLE_TRACK = 3;
    PERSON_PROPERTY_5_INTEGER_MUTABLE_TRACK = 4;
    PERSON_PROPERTY_6_DOUBLE_MUTABLE_TRACK = 5;
    PERSON_PROPERTY_7_BOOLEAN_IMMUTABLE_NO_TRACK = 6;
    PERSON_PROPERTY_8_INTEGER_IMMUTABLE_NO_TRACK = 7;
    PERSON_PROPERTY_9_DOUBLE_IMMUTABLE_NO_TRACK = 8;
}

message PersonPropertyValueInput {
    int32 pId = 1;
    optional google.protobuf.Any value = 2;
    optional double propertyValueTime = 3;
}

message PersonPropertyValueMapInput {
    PersonPropertyIdInput personPropertyId = 1;
    repeated PersonPropertyValueInput propertyValues = 2;
}

message PersonPropertiesPluginDataInput {
    repeated PropertyDefinitionMapInput personPropertyDefinitions = 1;
    repeated PersonPropertyValueMapInput personPropertyValues = 2;
}

message PersonPropertyReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated PersonPropertyIdInput includedProperties = 3;
    repeated PersonPropertyIdInput excludedProperties = 4;
    bool defaultInclusionPolicy = 5;
}

message PersonPropertyInteractionReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated PersonPropertyIdInput personPropertyIds = 3;
}
